bases/apps/torrents/prowlarr/prowlarr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:nightly-1.33.1.4997-ls190 # {"$imagepolicy": "torrents:prowlarr"}
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
          resources:
            requests:
              memory: "128Mi"
              cpu: "25m"
            limits:
              memory: "500Mi"
              cpu: "250m"
